--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="projects-container container grid">
           <article class="project-card">
-            <a href="#" target="_blank" class="project-link">
+            <a href="http://scalabu.netlify.app/" target="_blank" class="project-link">
               <img
                 src="images/scalabu screenshots.jpg"
                 alt="image"
@@ -82,16 +82,14 @@
               />
               <h2 class="project-title">Responsive Travel Website</h2>
               <p class="project-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Necessitatibus error incidunt nulla earum adipisci porro optio
-                animi nihil, excepturi laborum.
+                A user-friendly travel platform offering personalized travel experiences to destinations around the world. This project features an intuitive booking system, detailed tour packages, and seamless navigation, providing customers with the ability to explore, plan, and book their next adventure effortlessly
               </p>
               <i class="fa-solid fa-arrow-right"></i>
             </a>
           </article>
 
           <article class="project-card">
-            <a href="#" target="_blank" class="project-link">
+            <a href="http://planet-plate.netlify.app/" target="_blank" class="project-link">
               <img
                 src="images/foodplanet screenshot.jpg"
                 alt="image"
@@ -99,16 +97,14 @@
               />
               <h2 class="project-title">Responsive Food Delivery App</h2>
               <p class="project-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Necessitatibus error incidunt nulla earum adipisci porro optio
-                animi nihil, excepturi laborum.
+                A dynamic and responsive food delivery web app built using HTML, CSS, and JavaScript. This project features an intuitive, user-friendly interface that allows customers to browse menus and place orders with ease. The design is fully responsive, ensuring a seamless experience across desktop, tablet, and mobile devices.
               </p>
               <i class="fa-solid fa-arrow-right"></i>
             </a>
           </article>
 
           <article class="project-card">
-            <a href="#" target="_blank" class="project-link">
+            <a href="creative-digital-education.netlify.app" target="_blank" class="project-link">
               <img
                 src="images/creative digital screenshot.jpg"
                 alt="image"
@@ -116,9 +112,7 @@
               />
               <h2 class="project-title">Responsive Education Website</h2>
               <p class="project-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Necessitatibus error incidunt nulla earum adipisci porro optio
-                animi nihil, excepturi laborum.
+                A modern, responsive web platform designed with Html, Css and JavaScript to make online learning engaging and accessible. 
               </p>
               <i class="fa-solid fa-arrow-right"></i>
             </a>
@@ -137,9 +131,7 @@
               />
               <h2 class="project-title">Smile Doctor Foundation</h2>
               <p class="project-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Necessitatibus error incidunt nulla earum adipisci porro optio
-                animi nihil, excepturi laborum.
+                A WordPress-designed website focused on promoting oral healthcare education and providing dental services to underserved communities. 
               </p>
 
               <i class="fa-solid fa-arrow-right"></i>
@@ -159,9 +151,7 @@
               />
               <h2 class="project-title">Responsive E-commerce Website</h2>
               <p class="project-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Necessitatibus error incidunt nulla earum adipisci porro optio
-                animi nihil, excepturi laborum.
+                An e-commerce website built with WordPress and WooCommerce to sell Green World Nutritional Supplements. The site features a clean, user-friendly interface, secure product listings, and seamless checkout functionality to support a smooth shopping experience
               </p>
               <i class="fa-solid fa-arrow-right"></i>
             </a>
@@ -176,9 +166,7 @@
               />
               <h2 class="project-title">Responsive conscruction Website</h2>
               <p class="project-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Necessitatibus error incidunt nulla earum adipisci porro optio
-                animi nihil, excepturi laborum.
+                A professional website designed with WordPress for JECCL, a construction company. The site showcases the company’s services, project portfolio, and contact information with a clean layout and responsive design to effectively communicate trust, quality, and industry expertise.
               </p>
               <i class="fa-solid fa-arrow-right"></i>
             </a>
