updated my  portfolio

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </article>
 
           <article class="project-card">
-            <a href="creative-digital-education.netlify.app" target="_blank" class="project-link">
+            <a href="https://creative-digital-education.netlify.app/" target="_blank" class="project-link">
               <img
                 src="images/creative digital screenshot.jpg"
                 alt="image"
